# nami-agent

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  RELEASE_NOTES.md  package-lock.json  package.json  start.bat  tauri-launcher.html  vite.desktop.config.ts
scripts/: install-linux.sh  install-macos.sh  prepare-tauri-frontend.mjs  run-tauri-dev.cmd
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/desktop/: DesktopOptions.tsx  NamiAgent.tsx  UpdateChecker.tsx  desktop.css  main.tsx
